<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_Live_Chat">Live Chat </string>
    <string name="menu_Gallery">Gallery</string>

    <string name="home_second">Home Second</string>
    <string name="action_search">Search</string>
    <string name="welcome">welcome</string>
    <string name="name">Ali Samy</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_magazine">E-Magazine</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
