<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_live_chat"
            android:icon="@drawable/live"
            android:title="@string/menu_Live_Chat" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/menu_Gallery" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/wishlist"
            android:title="@string/menu_wish_list" />
        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/emagazine"
            android:title="@string/menu_magazine" />
    </group>
</menu>
